--- a/app/src/main/res/layout/activity_my_chip.xml
+++ b/app/src/main/res/layout/activity_my_chip.xml
@@ -7,10 +7,7 @@
 
     <include layout="@layout/layout_title" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="6.5dp"
-        android:background="@drawable/view_space" />
+    <include layout="@layout/divider_shawdow_white"/>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
@@ -32,26 +29,26 @@
                     android:id="@+id/iv_empty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/img_empty_follow"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="80dp"/>
+                    android:layout_marginTop="80dp"
+                    android:src="@drawable/img_empty_follow" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="您暂时没有碎片"
                     android:layout_below="@id/iv_empty"
-                    android:textColor="@color/tran_black5"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
-                    android:textSize="13sp"/>
+                    android:text="您暂时没有碎片"
+                    android:textColor="@color/tran_black5"
+                    android:textSize="13sp" />
             </RelativeLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_my_chip"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:overScrollMode="never"/>
+                android:overScrollMode="never" />
         </FrameLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
