--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
 
         <TextView
             style="@style/fragmentTitleText"
-            android:background="@color/main_tab_color"
+            android:background="@color/white"
             android:text="@string/home_title"
             android:textColor="#323232" />
 
@@ -36,7 +37,6 @@
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#edecec"
         android:focusableInTouchMode="true">
 
         <com.whzl.mengbi.ui.widget.ClassicsHeader
@@ -49,7 +49,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:background="#f9f9f9"
             android:focusableInTouchMode="false"
             android:nestedScrollingEnabled="false"
             android:paddingLeft="4dp"
