--- a/app/src/main/res/layout/item_private_chat_list.xml
+++ b/app/src/main/res/layout/item_private_chat_list.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_item_private_chat"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="4.5dp" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="12dp" />
 
         <TextView
             android:id="@+id/tv_nick"
@@ -24,7 +25,7 @@
             android:layout_marginLeft="13dp"
             android:layout_weight="1"
             android:textColor="@color/text_color_private_chat"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_time"
@@ -39,13 +40,11 @@
 
     <TextView
         android:id="@+id/tv_delete"
-        android:layout_width="57.5dp"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="match_parent"
         android:background="#ff2b3f"
         android:gravity="center"
-        android:paddingBottom="8.5dp"
-        android:paddingTop="8dp"
         android:text="删除"
         android:textColor="#FFFFFFFF"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 </LinearLayout>
