--- a/app/src/main/res/layout/fragment_goodnum_shop.xml
+++ b/app/src/main/res/layout/fragment_goodnum_shop.xml
@@ -54,7 +54,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="12dp"
-                    android:src="@drawable/close"
+                    android:src="@drawable/ic_close_shop"
                     android:visibility="gone" />
 
             </RelativeLayout>
