--- a/app/src/main/res/layout/activity_my_guard.xml
+++ b/app/src/main/res/layout/activity_my_guard.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_tab_color">
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/iv_back"
@@ -32,7 +32,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_tab_color">
+        android:background="@color/white">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_follow"
