--- a/app/src/main/res/layout/activity_nick_name_modify.xml
+++ b/app/src/main/res/layout/activity_nick_name_modify.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_toolbar" />
+    <include layout="@layout/white_toolbar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
