--- a/app/src/main/res/layout/activity_comm_web.xml
+++ b/app/src/main/res/layout/activity_comm_web.xml
@@ -4,18 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_toolbar"/>
+    <include layout="@layout/white_toolbar" />
 
     <ProgressBar
         android:id="@+id/progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:progressDrawable="@drawable/progress_web"/>
+        android:progressDrawable="@drawable/progress_web" />
 
     <com.tencent.smtt.sdk.WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
