--- a/app/src/main/res/layout/dialog_private_chat.xml
+++ b/app/src/main/res/layout/dialog_private_chat.xml
@@ -19,26 +19,23 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:paddingTop="7.5dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@color/text_color_private_chat"
-                android:textSize="12sp" />
+                android:padding="9.5dp"
+                android:textColor="@color/text_color_private_chat" />
 
-            <FrameLayout
+            <LinearLayout
                 android:id="@+id/ib_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5.5dp"
-                android:paddingBottom="2dp"
-                android:paddingRight="10dp"
-                android:paddingTop="2dp">
+                android:layout_width="30dp"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:gravity="center">
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -46,13 +43,13 @@
                     android:background="@drawable/ic_login_back"
                     android:scaleType="center"
                     android:src="@null" />
-            </FrameLayout>
+            </LinearLayout>
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="#05000000" />
+            android:background="#10000000" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
