--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -24,6 +24,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/rl_mengbi"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="5dp">
