--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -24,7 +24,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="230dp"
-                android:background="@color/tran_black2">
+                android:background="@color/transparent">
 
                 <ImageButton
                     android:id="@+id/btn_back"
