--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -65,4 +65,5 @@
     <dimen name="text_title_free_gift">13sp</dimen>
     <dimen name="text_content_free_gift">10sp</dimen>
     <dimen name="view_space">6.5dp</dimen>
+    <dimen name="textsize_12">12sp</dimen>
 </resources>
