--- a/app/src/main/res/drawable/btn_snatch_join.xml
+++ b/app/src/main/res/drawable/btn_snatch_join.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="1dp"/>
-    <stroke android:color="#ffefc7" android:width="0.5dp"/>
+    <solid android:color="#3c09a6" />
+    <corners android:radius="1dp" />
+    <stroke
+        android:width="0.5dp"
+        android:color="#ffefc7" />
 </shape>
