--- a/app/src/main/res/layout/dialog_snatch.xml
+++ b/app/src/main/res/layout/dialog_snatch.xml
@@ -114,8 +114,7 @@
                         android:layout_width="55dp"
                         android:layout_height="48dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:src="@drawable/ic_wallet_mengdou" />
+                        android:layout_marginLeft="16dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -137,12 +136,11 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/tv_gift_num"
+                                android:id="@+id/tv_prize_pool_num"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="middle"
                                 android:singleLine="true"
-                                android:text="8888"
                                 android:textColor="#ff416e"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
@@ -175,6 +173,7 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_second"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -274,6 +273,7 @@
                 android:paddingRight="12dp">
 
                 <TextView
+                    android:id="@+id/tv_limit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="每次100萌豆，已参与 0 / 10次"
