--- a/app/src/main/res/layout/dialog_snatch_his.xml
+++ b/app/src/main/res/layout/dialog_snatch_his.xml
@@ -12,6 +12,7 @@
         android:layout_marginRight="12dp"
         android:background="@drawable/bg_snatch_his"
         android:orientation="vertical"
+        android:paddingBottom="12dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp">
 
