--- a/app/src/main/res/layout/item_snatch_his.xml
+++ b/app/src/main/res/layout/item_snatch_his.xml
@@ -10,8 +10,9 @@
         android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:ellipsize="middle"
         android:gravity="center"
-        android:text="期号"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="11sp" />
 
@@ -20,8 +21,9 @@
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:ellipsize="middle"
         android:gravity="center"
-        android:text="中奖人"
+        android:singleLine="true"
         android:textColor="#fcff00"
         android:textSize="11sp" />
 
@@ -30,8 +32,9 @@
         android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:ellipsize="middle"
         android:gravity="center"
-        android:text="夺宝次数"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="11sp" />
 
@@ -40,8 +43,9 @@
         android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:ellipsize="middle"
         android:gravity="center"
-        android:text="中奖物品"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="11sp" />
 </LinearLayout>
